@@ -10,6 +10,7 @@ Current:
   * Avoid as many image rescaling actions as possible.
   * Having the already-compressed images in memory means a massive speedup for
     saving files with many images.
+  * Save the zoom factor at exit and reload it on opening a new file
 
 15.08:
   * Compatibility with maxima 5.37.0
